# shizaaa-

./: CMakeLists.txt
res/shaders/: fragmentShader.txt  texturefragment.txt  texturevertex.txt  vertexShader.txt
res/shaders/color_3d/: fragment3dshader.txt  vertex3dshader.txt
res/shaders/color_3d_instanced/: fragment_3d_ins.txt  vertex_3d_ins.txt
res/shaders/instanced_2.0/: fragment.txt  vertex.txt
src/: main.cpp
src/IO/: Cursor.cpp  Cursor.h
src/application/: Application.cpp  Application.h
src/attribute/: Attribute.cpp  Attribute.h
src/camera/: Camera.cpp  Camera.h
src/event/: Event.h
src/framelimiter/: FrameLimiter.h
src/geometry/: Geometry.cpp  Geometry.h
src/math/: Math.cpp  Math.h
src/memory/: EBO.cpp  EBO.h  VAO.cpp  VAO.h  VBO.h
src/object3d/: Object3d.cpp  Object3d.h
src/renderer/: Renderer.h  ShaderProgram.cpp  ShaderProgram.h
src/resourceManager/: ResourceManager.cpp  ResourceManager.h
src/screen/: Screen.cpp  Screen.h
src/ssbo/: SSBO.cpp  SSBO.h
src/textureObject/: TextureObject.cpp  TextureObject.h
